fix: remove nav-bar css rule to fix url visibility
after changes in firefox v133 this caused issues with urlbar

--- a/usr/share/webapp-manager/firefox/profile/chrome/userChrome.css
+++ b/usr/share/webapp-manager/firefox/profile/chrome/userChrome.css
@@ -1,12 +1,8 @@
 #navigator-toolbox:not(:hover, :focus, :active) {
-  #toolbar-menubar[inactive="true"] ~ #TabsToolbar,
-  #titlebar:has(#toolbar-menubar[inactive="true"]) ~ #nav-bar {
-	  visibility: collapse;
-  }
-}
-
-#nav-bar * {
-    visibility: visible !important;
+    #toolbar-menubar[inactive="true"] ~ #TabsToolbar,
+    #titlebar:has(#toolbar-menubar[inactive="true"]) ~ #nav-bar {
+        visibility: collapse;
+    }
 }
 
 #navigator-toolbox {
